<resources>
    <string name="app_name">File-Sharing</string>
    <string name="action_settings">Settings</string>
    <string name="title">Android文件分享</string>
    <string name="request_file">请求单个文件</string>
    <string name="request_files">请求多个文件</string>

    <string name="select_title">选择要分享的文件</string>
    <string name="action_finish">完成</string>

    <string name="file_name">文件名：</string>
    <string name="file_size">文件大小：</string>

    <string name="shared_file">收到的分享文件：</string>
</resources>
